[ GC ] Allocate memory from EpsilonHeap